Widgets: remove superfluous borders from gnome-terminal notebook.
Window decorations: set bottom width to 1 istead of 2.

--- a/themes/Adwaita/gtk-3.0/gnome-applications.css
+++ b/themes/Adwaita/gtk-3.0/gnome-applications.css
@@ -39,6 +39,12 @@ TerminalScreen {
     -TerminalScreen-background-darkness: 0.95;
 }
 
+TerminalWindow GtkNotebook.notebook {
+    border-bottom-width: 0;
+    border-right-width: 0;
+    border-left-width: 0;
+}
+
 /* nautilus */
 .nautilus-canvas-item {
     border-radius: 5;
