Widgets: GtkImage background should be transparent

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -98,6 +98,10 @@ GtkWindow:backdrop {
     color: @unfocused_insensitive_fg_color;
 }
 
+GtkImage,
+GtkImage:insensitive {
+    background-color: transparent;
+}
 
 /************
  * Tooltips *
