Widgets: fix switches on primary toolbars,          resized the resize grip,          added linked text entries.

--- a/themes/Adwaita/gtk-3.0/gtk-backgrounds.css
+++ b/themes/Adwaita/gtk-3.0/gtk-backgrounds.css
@@ -42,6 +42,14 @@ background-color: red;
     background-color: @unfocused_button_background;
 }
 
+/* Unfocused prelit button background */
+
+.button:hover:backdrop {
+    background-image: none;
+    background-color: @unfocused_button_hover_background;
+}
+
+
 /* Entry background */
 .entry,
 GtkComboBox.combobox-entry .button,
