--- a/themes/Adwaita/gtk-3.0/gnome-applications.css
+++ b/themes/Adwaita/gtk-3.0/gnome-applications.css
@@ -216,14 +216,7 @@ GeditPanel .notebook {
 }
 
 GeditWindow .notebook {
-    border-width: 1 0 1 0;
-}
-
-GeditStatusbar {
-    padding: 1 0 0 0;
-    border-width: 1 0 0 0;
-    border-style: solid;
-    border-color: @borders;
+    border-width: 1 0;
 }
 
 /* gnome-documents */
