--- a/themes/Adwaita/gtk-3.0/gtk-widgets-borders.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-borders.css
@@ -68,7 +68,7 @@ GtkSwitch.trough:active {
 /* primary toolbar - focused element borders */
 .primary-toolbar .entry:focus,
 .primary-toolbar .button:active:focus,
-.primary-toolbar GtkComboBox.combobox-entry .entry:focus,
+.primary-toolbar GtkComboBox.bobox-entry .entry:focus,
 .primary-toolbar .button.raised:focus:active,
 .primary-toolbar .raised .button:focus:active,
 .primary-toolbar .button.raised.default:active,
@@ -173,6 +173,7 @@ GtkSwitch.trough:backdrop,
 .primary-toolbar .button.raised:backdrop,
 .primary-toolbar .raised .button:backdrop,
 .primary-toolbar .entry:backdrop,
+.primary-toolbar GtkSwitch.trough:backdrop,
 .inline-toolbar.toolbar .button:backdrop { 
     border-image: url("borders/primary-toolbar-generic-border-unfocused.svg") 4 / 4 stretch;
     border-radius: 3;
