Widgets: add text shadows to labels on primary-toolbars,          see airplane mode in the network panel.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -194,6 +194,10 @@ GtkImage:insensitive {
     background-color: transparent;
 }
 
+.primary-toolbar GtkLabel {
+    text-shadow: @primary_toolbar_button_text_shadow 0 1;
+}
+
 /****************
  * Text Entries *
  ****************/
