--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -1058,10 +1058,18 @@ GtkLinkButton * {
     box-shadow: 0 1 inset alpha(black, 0.05); /* FIXME*/
     color:  @theme_base_color; /* FIXME*/
     icon-shadow: 0 1 alpha(black, 0.25); /* FIXME*/
-    border-color: alpha(black, 0.2) 
-                  alpha(black, 0.1) 
-                  alpha(black, 0.1) 
-                  alpha(black, 0.1); /* FIXME*/
+    border-color: alpha(black, 0.27) 
+                  alpha(black, 0.13) 
+                  alpha(black, 0.13) 
+                  alpha(black, 0.13); /* FIXME*/
+}
+
+.notebook tab .button GtkImage:backdrop {
+    color: mix(@theme_unfocused_fg_color, @theme_unfocused_base_color, 0.7); /* FIXME*/
+}
+
+.notebook tab .button GtkImage:backdrop:hover {
+    color: @theme_unfocused_fg_color;
 }
 
 /**************
