grip: turn resize grip rendering into a SVG asset
Instead of drawing it ourselves manually with cairo.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets-assets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-assets.css
@@ -1,3 +1,12 @@
+/***************
+ * Resize grip *
+ ***************/
+
+.grip {
+    background-color: transparent;
+    background-image: url("assets/resize-grip.svg");
+}
+
 /*************************
  * Check and Radio items *
  *************************/
