Fix sed errors introduced when adding "px".

--- a/themes/Adwaita/gtk-3.0/gnome-applications.css
+++ b/themes/Adwaita/gtk-3.0/gnome-applications.css
@@ -344,7 +344,7 @@ GeditWindow .notebook {
 }
 
 .documents-osd .toolbar {
-    padding: 1px 6px;
+    padding: 16px;
     border-style: none;
     border-radius: 5px;
     border-width: 0;
