--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -1485,44 +1485,39 @@ GtkTreeMenu .menuitem * {
 }
 
 .menuitem.check:active {
-    background-image: url("assets/menuitem-checkbox-checked.svg");
+    background-image: url("assets/menuitem-checkbox-checked.png");
 }
 
 .menuitem.check:active:hover {
-    background-image: url("assets/menuitem-checkbox-checked-selected.svg");
+    background-image: url("assets/menuitem-checkbox-checked-selected.png");
 }
 
 .menuitem.check:active:insensitive {
-    background-image: url("assets/menuitem-checkbox-checked-insensitive.svg");
+    background-image: url("assets/menuitem-checkbox-checked-insensitive.png");
 }
 
-.menuitem.check:inconsistent {
-    background-image: url("assets/menuitem-checkbox-mixed.svg");
+.menuitem.check:inconsistent,
+.menuitem.radio:inconsisten {
+    background-image: url("assets/menuitem-checkbox-mixed.png");
 }
 
-.menuitem.check:inconsistent:insensitive {
-    background-image: url("assets/menuitem-checkbox-mixed-insensitive.svg");
+.menuitem.check:inconsistent:insensitive,
+.menuitem.radio:inconsisten:insensitive {
+    background-image: url("assets/menuitem-checkbox-mixed-insensitive.png");
 }
 
 .menuitem.radio:active {
-    background-image: url("assets/menuitem-radio-checked.svg");
+    background-image: url("assets/menuitem-radio-checked.png");
 }
 
 .menuitem.radio:active:hover {
-    background-image: url("assets/menuitem-radio-checked-selected.svg");
+    background-image: url("assets/menuitem-radio-checked-selected.png");
 }
 
 .menuitem.radio:active:insensitive {
-    background-image: url("assets/menuitem-radio-checked-insensitive.svg");
+    background-image: url("assets/menuitem-radio-checked-insensitive.png");
 }
 
-.menuitem.radio:inconsistent {
-    background-image: url("assets/menuitem-radio-mixed.svg");
-}
-
-.menuitem.radio:inconsistent:insensitive {
-    background-image: url("assets/menuitem-radio-mixed-insensitive.svg");
-}
 
 /***************
  * Menu Button *
