Widgets: add hover state to incosistent checks and radios          on menu dropdowns.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -1506,6 +1506,11 @@ GtkTreeMenu .menuitem * {
     background-image: url("assets/menuitem-checkbox-mixed-insensitive.png");
 }
 
+.menuitem.check:inconsistent:hover,
+.menuitem.radio:inconsistent:hover {
+    background-image: url("assets/menuitem-checkbox-mixed-selected.png");
+}
+
 .menuitem.radio:active {
     background-image: url("assets/menuitem-radio-checked.png");
 }
