--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -1051,6 +1051,7 @@ GtkLinkButton * {
 
 .notebook tab .button GtkImage:backdrop {
     color: mix(@theme_unfocused_fg_color, @theme_unfocused_base_color, 0.7); /* FIXME*/
+    icon-shadow: none;
 }
 
 .notebook tab .button GtkImage:backdrop:hover {
