--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -906,23 +906,15 @@ GtkLinkButton * {
 
 .notebook tab {
     padding: 3px;
-    background-image: -gtk-gradient (linear,
-                                     left top, left bottom,
-                                     from (@notebook_tab_hilight),
-                                     color-stop (0.15, @notebook_tab_hilight),
-                                     color-stop (0.15, @notebook_tab_gradient_a),
-                                     to (@notebook_tab_gradient_b));
+    border-style: solid;
+    /* we draw our own custom border here for now */
+    border-width: 0;
 
-    -adwaita-focus-border-radius: 2;
-}
+    background-image: linear-gradient(to bottom,
+                                      @notebook_tab_hilight 1px,
+                                      @notebook_tab_gradient_a 2px,
+                                      @notebook_tab_gradient_b);
 
-/* workaround */
-.notebook tab.bottom {
-    padding: 3px;
-    background-image: -gtk-gradient (linear,
-                                     left bottom, left top,
-                                     from (@notebook_tab_gradient_a),
-                                     to (@notebook_tab_gradient_b));
     -adwaita-focus-border-radius: 2;
 }
 
@@ -938,11 +930,11 @@ GtkLinkButton * {
                                              from (@notebook_active_tab_border),
                                              to (@borders));
 
-    -adwaita-selected-tab-color: @notebook_selected_tab_color;
-    background-image: -gtk-gradient (linear,
-                                     left top, left bottom,
-                                     from (@button_gradient_color_a),
-                                     to (@theme_base_color));
+    background-image: linear-gradient(to bottom,
+                                      @notebook_selected_tab_color,
+                                      @notebook_selected_tab_color 2px,
+                                      @button_gradient_color_a 3px,
+                                      @theme_base_color);
 }
 
 .notebook tab:active:backdrop {
@@ -996,21 +988,19 @@ GtkLinkButton * {
     -adwaita-selected-tab-color: alpha(@theme_base_color, 0.0);
 }
 
-.notebook tab.left {
-    border-radius: 3px 0 0 3px;
+.notebook tab.left,
+.notebook tab.right {
+    border-width: 1px;
 }
 
 .notebook tab.left:active {
     padding: 3px 3px 3px 5px;
-    border-width: 1px;
-}
-
-.notebook tab.right {
-    border-radius: 0 3px 3px 0;
+    border-radius: 3px 0 0 3px;
 }
 
 .notebook tab.right:active {
     padding: 3px 5px 3px 3px;
+    border-radius: 0 3px 3px 0;
 }
 
 .notebook tab .button,
