--- a/themes/Adwaita/gtk-3.0/gnome-applications.css
+++ b/themes/Adwaita/gtk-3.0/gnome-applications.css
@@ -219,6 +219,11 @@ GeditWindow .notebook {
     border-width: 1px 0;
 }
 
+GeditPanel .notebook tab,
+GeditWindow .notebook tab {
+    border-width: 0;
+}
+
 /* gnome-documents */
 .documents-dropdown,
 .documents-dropdown .view {
@@ -545,6 +550,10 @@ EphyToolbar .location-entry .button:hover:backdrop {
 
 EphyNotebook.notebook {
     border-width: 1px 0 1px 0;
+}
+
+EphyNotebook.notebook tab {
+    border-width: 0;
 }
 
 EphyToolbar.toolbar .button {
