widgets: add a background-color definition in .entry { }
The deprecated GtkStyle in GTK+ uses the background-color definition
from the .entry { } selector to fill in text and base color values, so
we must keep this if we want older applications (not ported to
GtkStyleContext) to just work.

https://bugzilla.gnome.org/show_bug.cgi?id=669499

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -194,6 +194,7 @@ GtkImage:insensitive {
  * Text Entries *
  ****************/
 .entry {
+    background-color: @theme_base_color;
     border-style: solid;
     padding: 4px;
 
