Widgets: set correct borders to insensitive buttons on primary          and inline toolbars for backdrop windows.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets-borders-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-borders-dark.css
@@ -173,7 +173,8 @@ GtkSwitch.trough:backdrop,
 .primary-toolbar .button.raised:backdrop,
 .primary-toolbar .raised .button:backdrop,
 .primary-toolbar .entry:backdrop,
-.inline-toolbar.toolbar .button:backdrop { 
+.inline-toolbar.toolbar .button:backdrop,
+.inline-toolbar.toolbar .button:backdrop:insensitive { 
     border-image: url("borders/primary-toolbar-generic-border-unfocused-dark.svg") 4 / 4 stretch;
     border-radius: 3px;
     border-width: 2px;
