--- a/themes/Adwaita/gtk-3.0/gtk-widgets-borders.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-borders.css
@@ -174,7 +174,8 @@ GtkSwitch.trough:backdrop,
 .primary-toolbar .raised .button:backdrop,
 .primary-toolbar .entry:backdrop,
 .primary-toolbar GtkSwitch.trough:backdrop,
-.inline-toolbar.toolbar .button:backdrop { 
+.inline-toolbar.toolbar .button:backdrop,
+.inline-toolbar.toolbar .button:backdrop:insensitive { 
     border-image: url("borders/primary-toolbar-generic-border-unfocused.svg") 4 / 4 stretch;
     border-radius: 3px;
     border-width: 2px;
