Widgets: set correct borders to comboboxes on primary toolbars          for backdrop windows.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets-borders.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-borders.css
@@ -159,7 +159,7 @@ column-header:last-child .button:active:focus {
 .button:backdrop,
 GtkComboBox.combobox-entry .entry:backdrop,
 GtkComboBox.combobox-entry .button:backdrop,
-GtkComboBox *:backdrop, 
+GtkComboBox *:backdrop,
 .entry:backdrop,
 GtkSwitch.trough:backdrop,
 .trough:backdrop {
@@ -175,7 +175,9 @@ GtkSwitch.trough:backdrop,
 .primary-toolbar .entry:backdrop,
 .primary-toolbar GtkSwitch.trough:backdrop,
 .inline-toolbar.toolbar .button:backdrop,
-.inline-toolbar.toolbar .button:backdrop:insensitive { 
+.inline-toolbar.toolbar .button:backdrop:insensitive,
+.primary-toolbar GtkComboBox *:backdrop,
+.primary-toolbar GtkComboBox *:backdrop:insensitive { 
     border-image: url("borders/primary-toolbar-generic-border-unfocused.svg") 4 / 4 stretch;
     border-radius: 3px;
     border-width: 2px;
